--- a/readme
+++ b/readme
@@ -4,3 +4,5 @@ Add the list of phone numbers without country codes or '-' to use it.
 
 SuprabhatSpam.py is a average spam code that depends on user to select a chat to send messages on and sends the hindi
 shayari format Good Morning messages as our venerable elders taught us to do every morning.
+
+Made by Saumil and Toshan
